add proxy and fix qrcode

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-    "skuId": "100015253061",
-    "areaId": "1_2901_4135",
-    "count": 1,
-    "stockInterval": 3
+  "skuId": "2281456",
+  "areaId": "19_1607_3155",
+  "count": 1,
+  "stockInterval": 1,
+  "buyTime": "2022-12-13 10:19:17"
 }
